@@ -1,5 +1,6 @@
 package fuzs.puzzleslib.fabric.mixin;
 
+import com.google.common.collect.ImmutableSet;
 import fuzs.puzzleslib.api.core.v1.ModLoaderEnvironment;
 import fuzs.puzzleslib.impl.PuzzlesLib;
 import org.objectweb.asm.tree.ClassNode;
@@ -11,7 +12,7 @@ import java.util.List;
 import java.util.Set;
 
 public class MixinConfigPluginFabricImpl implements IMixinConfigPlugin {
-    private static final Collection<String> DEVELOPMENT_MIXINS = Set.of("client.OptionsFabricMixin");
+    private static final Collection<String> DEVELOPMENT_MIXINS = ImmutableSet.of("client.OptionsFabricMixin");
 
     @Override
     public void onLoad(String mixinPackage) {
@@ -25,8 +26,8 @@ public class MixinConfigPluginFabricImpl implements IMixinConfigPlugin {
 
     @Override
     public boolean shouldApplyMixin(String targetClassName, String mixinClassName) {
-        return ModLoaderEnvironment.INSTANCE.isDevelopmentEnvironment(PuzzlesLib.MOD_ID) ||
-                !DEVELOPMENT_MIXINS.contains(mixinClassName.replaceAll(".+\\.mixin\\.", ""));
+        return ModLoaderEnvironment.INSTANCE.isDevelopmentEnvironment(PuzzlesLib.MOD_ID)
+                || !DEVELOPMENT_MIXINS.contains(mixinClassName.replaceAll(".+\\.mixin\\.", ""));
     }
 
     @Override
